# ChangeLog for x11-libs/wxGTK
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/ChangeLog,v 1.221 2009/04/25 02:25:43 dirtyepic Exp $

*wxGTK-2.8.9.2-r1 (25 Apr 2009)

  25 Apr 2009; Ryan Hill <dirtyepic@gentoo.org>
  +files/wxGTK-2.8.9.2-nestedtables.patch, wxGTK-2.8.9.1-r3, wxGTK-2.8.9.2,
  +wxGTK-2.8.9.2-r1.ebuild:
  - Fix nested HTML tables (bug #264544, Ivan Trombley)
  - Add missing gconf dependency with USE=gstreamer (bug #267022, Morten Lied 
    Johansen)

*wxGTK-2.8.9.2 (21 Feb 2009)

  21 Feb 2009; Ryan Hill <dirtyepic@gentoo.org> +wxGTK-2.8.9.2.ebuild:
  Version bump.

  15 Feb 2009; Ryan Hill <dirtyepic@gentoo.org> -wxGTK-2.8.8.1.ebuild,
  -wxGTK-2.8.9.1-r2.ebuild:
  Remove old.

  15 Feb 2009; Brent Baude <ranger@gentoo.org> wxGTK-2.8.9.1-r3.ebuild:
  Marking wxGTK-2.8.9.1-r3 ppc for bug 254696

  07 Feb 2009; Raúl Porcel <armin76@gentoo.org> wxGTK-2.8.9.1-r3.ebuild:
  arm/ia64/sh/sparc stable wrt #254696

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> wxGTK-2.8.9.1-r3.ebuild:
  Stable for HPPA (bug #254696).

  28 Jan 2009; Brent Baude <ranger@gentoo.org> wxGTK-2.8.9.1-r3.ebuild:
  Marking wxGTK-2.8.9.1-r3 ppc64 for bug 254696

  24 Jan 2009; Ryan Hill <dirtyepic@gentoo.org> -wxGTK-2.6.4.0-r1.ebuild:
  Drop ancient ebuild.

  22 Jan 2009; Raúl Porcel <armin76@gentoo.org> wxGTK-2.6.4.0-r4.ebuild:
  arm/sh stable

  22 Jan 2009; Raúl Porcel <armin76@gentoo.org> wxGTK-2.6.4.0-r4.ebuild,
  wxGTK-2.8.9.1-r3.ebuild:
  Readd ~arm/~sh

  18 Jan 2009; Markus Meier <maekke@gentoo.org> wxGTK-2.8.9.1-r3.ebuild:
  amd64/x86 stable, bug #254696

  18 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  wxGTK-2.8.9.1-r3.ebuild:
  Stable on alpha, bug #254696

  22 Nov 2008; Ryan Hill <dirtyepic@gentoo.org> wxGTK-2.6.4.0-r1.ebuild:
  Drop all but arm and sh until they keyword eselect-wxwidgets.

*wxGTK-2.8.9.1-r3 (07 Nov 2008)
*wxGTK-2.8.9.1-r2 (07 Nov 2008)
