@@ -6,10 +6,11 @@ AUX wxGTK-2.8.9-dont-touch-my-bools.patch 872 RMD160 931ba9d7b4929a2c44b6866c61f
 AUX wxGTK-2.8.9.2-interix.patch 2328 RMD160 035aa340f7922ecc2e5f1e119330f790714106d8 SHA1 860d6bd65d3eb40f22f528ab072567f77efda8bb SHA256 64bd2f7c1934794071e204743d8dee44de7312bed6457029ad929b38cf30fbee
 AUX wxGTK-2.8.9.2-nestedtables.patch 773 RMD160 82a481f6ec6ad668308ddf1b10803f46d344eb14 SHA1 74e37c2d44d44cd335ff469be42006d2dbb7ddf3 SHA256 a0509fbfc428c4706818c972c49da447dea75808fa856fcce6872acafcc7976c
 AUX wxGTK-2.8.9.2-x11-search.patch 466 RMD160 02065b67c719c7800f15814e0dac09f8563f8dac SHA1 055f7e684911360e5c5594a81acc860d57a72a5b SHA256 a5b759930d074e0236cc690c54fab1569cc2939fa65f70ff8a5b8886328ff469
+DIST wxPython-src-2.8.10.1.tar.bz2 29770994 RMD160 bb606046d140623041b988e64ab268ced9aa958f SHA1 6598fbafd979a91f20100171fa23a91779f6dc62 SHA256 447690773279088e9d06dcfe56f00f310c0186de435969bb60b04ed0c3f25f5f
 DIST wxPython-src-2.8.9.1.tar.bz2 27969655 RMD160 2b193c867a028985f8ead4084a9c1f024a1d37c6 SHA1 7359af790d58082330c867f5c10f51b6382d9a35 SHA256 584bc8a90e413409c20d1aff05bf547809fc2b57b74c5aba60fc3a2a98a0e7fa
 DIST wxPython-src-2.8.9.2.tar.bz2 29370216 RMD160 93a9bd35b59e16674375b1431e24d47b58a824d2 SHA1 a0d58d8b9606d04a35b9853da15eb7dfb08d5637 SHA256 0683ef245d7c121dea7f16f08f0d2cd77348d588e6831cc3bc88cf23dc6029b5
+EBUILD wxGTK-2.8.10.1.ebuild 3742 RMD160 2bc0829fc29afacee0898454539ac0abcac08e39 SHA1 4907a96977df51e817f8a62329fafc7efd2b4a2c SHA256 1f1695599e65a9e67fbc969379a6094820a4910e190eb1ecd3adb0569e265aa1
 EBUILD wxGTK-2.8.9.1-r3.ebuild 3496 RMD160 0ea848421e519073fabac61241d68277307bf8a6 SHA1 2f00a658b9b9b03d3199ee854fba2f7d2e6bb30e SHA256 2a384afbf1a77fa8d18bbd809839f305093eaafee8d64c0c8c83ee95798d6c0b
 EBUILD wxGTK-2.8.9.2-r1.ebuild 3853 RMD160 b00a342a1817b5e925a102bf66dc3e160a9af210 SHA1 f99cb7b6c9d604b9b10b19984747cc2f8ab1518c SHA256 7034b1c3c7614fc247eef57742478847556a8895f5dfeffbb00607cdac3cb172
-EBUILD wxGTK-2.8.9.2.ebuild 3776 RMD160 6b1e7eaa26886dbcdde2b10ecacb3c49135acc0b SHA1 41c341974b822e2a93ea675db08696354d991585 SHA256 f2c33d704487f32e997866c1b6073d410978fb0e6df6ff1fda60c7d97d98d77c
-MISC ChangeLog 34664 RMD160 de499cfb4fbb10481265dc1ca728aca23ee04083 SHA1 990c6e9e4b5fe0a6a413f32d14b5fb8b0fe9ba78 SHA256 3496cf6fba9ed9cb557f471993db9618c1aa5d55614722caecfa71e4231b9bba
+MISC ChangeLog 34921 RMD160 154b6ec10a14af0bd1ac0dba912d91fd74cde12f SHA1 a93a893d2c5284d5d5527258b79cfc6795a80615 SHA256 0f16e6330512e09bda9ccae880fda964dceb7c1198824d6fcb860382114bd9ad
 MISC metadata.xml 500 RMD160 d0f05c0d915928bc4c424ca00f20621805ddc7f0 SHA1 3ba77d570e4764cf377b3e63078b21f69232a1fc SHA256 2592b31d76fd0a79aa634bcbc9697d7ee8420b89cbead01a8db562a4d66be98c
