@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/wxGTK-2.8.9.2.ebuild,v 1.2 2009/04/25 02:25:43 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/wxGTK-2.8.10.1.ebuild,v 1.1 2009/05/18 03:15:29 dirtyepic Exp $
 
 EAPI=2
 
@@ -59,11 +59,10 @@ S="${WORKDIR}/wxPython-src-${PV}"
 src_prepare() {
 	cd "${S}"
 	epatch "${FILESDIR}"/${PN}-2.6.3-unicode-odbc.patch
-	epatch "${FILESDIR}"/${PN}-2.8.8-collision.patch
-	epatch "${FILESDIR}"/${PN}-2.8.6-wxrc_link_fix.patch
+	epatch "${FILESDIR}"/${PN}-2.8.10-collision.patch
 	epatch "${FILESDIR}"/${PN}-2.8.7-mmedia.patch              # Bug #174874
-	epatch "${FILESDIR}"/${P}-interix.patch
-	epatch "${FILESDIR}"/${P}-x11-search.patch
+	epatch "${FILESDIR}"/${PN}-2.8.9.2-interix.patch
+	epatch "${FILESDIR}"/${PN}-2.8.9.2-x11-search.patch
 
 	eprefixify "${S}"/configure.in
 
