@@ -1,6 +1,14 @@
 # ChangeLog for x11-libs/wxGTK
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/ChangeLog,v 1.221 2009/04/25 02:25:43 dirtyepic Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/wxGTK/ChangeLog,v 1.222 2009/05/18 03:15:29 dirtyepic Exp $
+
+*wxGTK-2.8.10.1 (18 May 2009)
+
+  18 May 2009; Ryan Hill <dirtyepic@gentoo.org>
+  -files/wxGTK-2.8.4-collision.patch, -files/wxGTK-2.8.7-race-fix.patch,
+  -wxGTK-2.8.9.2.ebuild, +wxGTK-2.8.10.1.ebuild,
+  +files/wxGTK-2.8.10-collision.patch:
+  Version bump.
 
 *wxGTK-2.8.9.2-r1 (25 Apr 2009)
 
